<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/restaurant_logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/pizzeria2" />

    <TextView
        android:id="@+id/store_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/store_label"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_logo"
        tools:ignore="UnknownId" />

    <Spinner
        android:id="@+id/store_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        app:backgroundTint="@color/light_red"
        android:entries="@array/stores_array"/>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/name_label"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_spinner" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/name_input"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/name_label" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/submit_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:background="@drawable/sharp_corner"
        />

</LinearLayout>