<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingStart="8dp"
            android:gravity="top"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/outline_person_32"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/pizza_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_wide"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_text"
                app:srcCompat="@drawable/pizza_round"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:layout_marginLeft="@dimen/margin_wide" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pizza_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/pizza_title"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/pizza_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/pizza_short_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pizza"
                    app:layout_constraintTop_toTopOf="@+id/pizza" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spaghetti_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_wide"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/spaghetti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginLeft="@dimen/margin_wide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_text"
                app:srcCompat="@drawable/spaghetti_round"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spaghetti_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/spaghetti_title"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/spaghetti_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/spaghetti_short_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spaghetti"
                    app:layout_constraintTop_toTopOf="@+id/spaghetti" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/burger_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_wide"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_text"
                app:srcCompat="@drawable/burger_round"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:layout_marginLeft="@dimen/margin_wide" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/burger_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/burger_title"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/burger_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/burger_short_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/burger"
                    app:layout_constraintTop_toTopOf="@+id/burger" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steak_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_wide"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/steak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginLeft="@dimen/margin_wide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_text"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:srcCompat="@drawable/steak_round" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/steak_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/steak_title"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/steak_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/steak_short_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/steak"
                    app:layout_constraintTop_toTopOf="@+id/steak" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/margin_wide"
        android:layout_marginBottom="36dp"
        app:srcCompat="@drawable/add_icon"
        android:tint="@color/white"
        android:backgroundTint="@color/light_red"/>
</RelativeLayout>